refactor(rag): Cross-Encoder Reranker + Failure Loopback + KB Bean + Step-back/HyDE
- BgeReranker: 基于 BGE 的标题加权精排（title×0.4 + content×0.6）
- RetrievalFailureAnalyzer: 检索失败根因分析服务
- KnowledgeBaseConfig: InMemoryKnowledgeBase Spring @Configuration
  + 自动注入 BgeReranker/ChineseTokenizer/RetrievalTraceRepository
  + 自动接线 traceConsumer → Redis
- MultiQueryService: 新增 Step-back 和 HyDE 查询扩展策略
  + expand(query, ExpansionStrategy) 统一入口
  + ExpansionStrategy 枚举: MULTI_QUERY/STEP_BACK/HYDE